--- a/src/wid-card-theme-behavior.html
+++ b/src/wid-card-theme-behavior.html
@@ -13,12 +13,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   .xmass_snow_top {
     position: absolute;
     width: 103%;
-    height: 38%;
     z-index: 1000;
     top: -10px;
     left: -4px;
     overflow: visible;
   }
+
+  .xmass_snow_top_height_1 {
+    height: 38%;    
+  }
+
+  .xmass_snow_top_height_2 {
+    height: 24%;    
+  }
+
 </style>
 </body>
 <script>
@@ -72,10 +80,12 @@ Polymer.WidCardThemeBehavior = {
       var plusWidthCount = 2;
 
       var imgIndex = (this.cWidth === 1) ? this.cIndex % oneWidthCount : (this.cIndex % plusWidthCount) + oneWidthCount;
+      var heightClass = (this.cWidth === 1) ? 'xmass_snow_top_height_1' : 'xmass_snow_top_height_2';
 
       var snowImg = document.createElement('img');
       snowImg.src = '/images/themes/xmass/' + this._getImage(imgIndex);
-      snowImg.setAttribute('class','xmass_snow_top');
+      snowImg.setAttribute('class', 'xmass_snow_top');
+      snowImg.setAttribute('class', heightClass);
       Polymer.dom(this.$.mainContent).appendChild(snowImg);        
     }
   },
