--- a/wid-card-theme-behavior.html
+++ b/wid-card-theme-behavior.html
@@ -12,12 +12,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   .xmass_snow_top {
     position: absolute;
     width: 103%;
-    height: 38%;
     z-index: 1000;
     top: -10px;
     left: -4px;
     overflow: visible;
   }
+
+  .xmass_snow_top_height_1 {
+    height: 38%;    
+  }
+
+  .xmass_snow_top_height_2 {
+    height: 24%;    
+  }
+
 </style>
 
 <script src="wid-card-theme-behavior.js"></script></body></html>
