--- a/src/wid-card-theme-behavior.html
+++ b/src/wid-card-theme-behavior.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 
   .xmass_snow_top_height_2 {
-    height: 24%;    
+    height: 25%;    
   }
 
 </style>
@@ -84,8 +84,7 @@ Polymer.WidCardThemeBehavior = {
 
       var snowImg = document.createElement('img');
       snowImg.src = '/images/themes/xmass/' + this._getImage(imgIndex);
-      snowImg.setAttribute('class', 'xmass_snow_top');
-      snowImg.setAttribute('class', heightClass);
+      snowImg.setAttribute('class', 'xmass_snow_top ' + heightClass);
       Polymer.dom(this.$.mainContent).appendChild(snowImg);        
     }
   },
