--- a/src/wid-card-theme-behavior.html
+++ b/src/wid-card-theme-behavior.html
@@ -47,6 +47,10 @@ Polymer.WidCardThemeBehavior = {
       type: Number
     },
 
+    themeTag: {
+      type: String
+    },
+    
     xmassImages: {
       type: Array,
       value: [
