xmass theme improvement.

--- a/src/wid-card-theme-behavior.html
+++ b/src/wid-card-theme-behavior.html
@@ -27,6 +27,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 25%;    
   }
 
+  .xmass_snow_top_height_3 {
+    height: 15%;    
+  }
+
 </style>
 </body>
 <script>
@@ -44,6 +48,10 @@ Polymer.WidCardThemeBehavior = {
     },
 
     cWidth: {
+      type: Number
+    },
+
+    cHeight : {
       type: Number
     },
 
@@ -84,7 +92,7 @@ Polymer.WidCardThemeBehavior = {
       var plusWidthCount = 2;
 
       var imgIndex = (this.cWidth === 1) ? this.cIndex % oneWidthCount : (this.cIndex % plusWidthCount) + oneWidthCount;
-      var heightClass = (this.cWidth === 1) ? 'xmass_snow_top_height_1' : 'xmass_snow_top_height_2';
+      var heightClass = (this.cHeight < 3) ? 'xmass_snow_top_height_' + this.cHeight  : 'xmass_snow_top_height_3';
 
       var snowImg = document.createElement('img');
       snowImg.src = '/images/themes/xmass/' + this._getImage(imgIndex);
