--- a/wid-card-theme-behavior.html
+++ b/wid-card-theme-behavior.html
@@ -26,6 +26,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 25%;    
   }
 
+  .xmass_snow_top_height_3 {
+    height: 15%;    
+  }
+
 </style>
 
 <script src="wid-card-theme-behavior.js"></script></body></html>
